fixes to monitor
